# hopitude_to_ical

./: .gitignore  Cargo.toml  Dockerfile  README.md  hopitude.toml  hopitude.toml.example
src/: config.rs  events.rs  files.rs  main.rs
