[package]
name = "hopitude_to_ical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.28", features = ["serde"] }
config-file = "0.2.3"
serde = { version = "1.0.188", features = ["serde_derive"] }
