[package]
name = "hopitude_to_ical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.28", features = ["serde"] }
chrono-tz = "0.8.3"
config-file = "0.2.3"
error-chain = "0.12.4"
icalendar = "0.15.7"
reqwest = { version = "0.11.20", features = ["gzip", "serde_json", "blocking", "json"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
